--- a/CodeDemo/pom.xml
+++ b/CodeDemo/pom.xml
@@ -29,5 +29,12 @@
 	  <version>1.9.5</version>
 	</dependency>
 	
+	<!-- netty -->
+	<dependency>
+	  <groupId>io.netty</groupId>
+	  <artifactId>netty-all</artifactId>
+	  <version>5.0.0.Alpha1</version>
+	</dependency>
+	
   </dependencies>
 </project>
