--- a/CodeDemo/.settings/org.eclipse.core.resources.prefs
+++ b/CodeDemo/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,6 @@
 eclipse.preferences.version=1
 encoding//src/main/java=UTF-8
+encoding//src/main/java/socket/netty/TimeClient.java=UTF-8
+encoding//src/main/java/socket/netty/TimeServer.java=UTF-8
 encoding//src/test/java=UTF-8
 encoding/<project>=UTF-8
