--- a/CodeDemo/pom.xml
+++ b/CodeDemo/pom.xml
@@ -36,5 +36,11 @@
 	  <version>5.0.0.Alpha1</version>
 	</dependency>
 	
+	 <dependency>
+	  <groupId>log4j</groupId>
+	  <artifactId>log4j</artifactId>
+	  <version>1.2.17</version>
+	</dependency>
+	
   </dependencies>
 </project>
