--- a/CodeDemo/pom.xml
+++ b/CodeDemo/pom.xml
@@ -42,5 +42,12 @@
 	  <version>1.2.17</version>
 	</dependency>
 	
+	<dependency>
+	  <groupId>commons-codec</groupId>
+	  <artifactId>commons-codec</artifactId>
+	  <version>1.9</version>
+	</dependency>
+
+	
   </dependencies>
 </project>
